force-app/main/default/objects/Opportunity/fields/Contract_Length__c.field-meta.xml
<CustomField>
    <fullName>Contract_Length__c</fullName>
    <description>Duration of the Catalyst subscription contract. Required before advancing to Proposal Sent stage (enforced by Opp_ProposalSentGate validation rule). Req: MKT-REQ-SALES-013.</description>
    <label>Contract Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>24 Months</fullName>
            </value>
            <value>
                <fullName>36 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>