force-app/main/default/objects/Opportunity/fields/Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date__c</fullName>
    <description>Expected date the prospect will make a purchase decision. Required before advancing to Proposal Sent stage (enforced by Opp_ProposalSentGate validation rule). Req: MKT-REQ-SALES-013.</description>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>