force-app/main/default/objects/Opportunity/fields/Economic_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Economic_Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact with budget authority for this opportunity. Required before advancing to Proposal Sent stage (enforced by Opp_ProposalSentGate validation rule). Req: MKT-REQ-SALES-013.</description>
    <label>Economic Buyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Economic Buyer)</relationshipLabel>
    <relationshipName>Economic_Buyer_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>