force-app/main/default/objects/Opportunity/fields/Loss_Notes__c.field-meta.xml
<CustomField>
    <fullName>Loss_Notes__c</fullName>
    <description>Optional qualitative notes on why the opportunity was lost. Supplements Loss_Reason__c for win/loss analysis. Req: MKT-REQ-SALES-016.</description>
    <label>Loss Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>