force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <description>Primary reason the opportunity was lost. Required when Stage is set to Closed Lost (enforced by Opp_ClosedLostRequiresReason validation rule). Drives win/loss analysis reporting. Req: MKT-REQ-SALES-016.</description>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competitor — Named</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
            <value>
                <fullName>No Decision</fullName>
            </value>
            <value>
                <fullName>Product Gap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>