force-app/main/default/objects/Opportunity/fields/Max_Discount_Pct__c.field-meta.xml
<CustomField>
    <fullName>Max_Discount_Pct__c</fullName>
    <description>Maximum discount percentage across all quote line items. Drives the VP of Sales quote approval threshold (>15% triggers approval). Formula references quote line items; complete when CPQ is configured. Req: MKT-REQ-SALES-015.</description>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>