force-app/main/default/objects/Opportunity/fields/Proposed_ACV__c.field-meta.xml
<CustomField>
    <fullName>Proposed_ACV__c</fullName>
    <description>Proposed annual contract value — sum of opportunity product line items. Formula references OpportunityLineItem; complete when Products/CPQ are configured. Req: MKT-REQ-SALES-014.</description>
    <formula>Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposed ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>