force-app/main/default/objects/Opportunity/recordTypes/New_Business.recordType-meta.xml
<RecordType>
    <fullName>New_Business</fullName>
    <active>true</active>
    <description>New logo opportunities — net-new customers acquiring the Catalyst platform for the first time.</description>
    <label>New Business</label>
    <businessProcess>Catalyst_Sales_Process</businessProcess>
</RecordType>