force-app/main/default/objects/Opportunity/recordTypes/Renewal.recordType-meta.xml
<RecordType>
    <fullName>Renewal</fullName>
    <active>true</active>
    <description>Renewal opportunities — existing customers renewing or upgrading their Catalyst subscription.</description>
    <label>Renewal</label>
    <businessProcess>Catalyst_Sales_Process</businessProcess>
</RecordType>