force-app/main/default/objects/Opportunity/validationRules/Opp_ClosedLostRequiresReason.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp_ClosedLostRequiresReason</fullName>
    <active>true</active>
    <description>Enforces that a Loss Reason is provided when closing an opportunity as Lost. Drives win/loss reporting accuracy. Req: MKT-REQ-SALES-016.</description>
    <errorConditionFormula>ISCHANGED(StageName) &amp;&amp; ISPICKVAL(StageName, &apos;Closed Lost&apos;) &amp;&amp; ISPICKVAL(Loss_Reason__c, &apos;&apos;)</errorConditionFormula>
    <errorMessage>Loss Reason is required when closing an opportunity as Lost.</errorMessage>
</ValidationRule>