force-app/main/default/objects/Opportunity/validationRules/Opp_ProposalSentGate.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp_ProposalSentGate</fullName>
    <active>true</active>
    <description>Enforces that Contract Length, Decision Date, and Economic Buyer are set before advancing the opportunity to Proposal Sent stage. Req: MKT-REQ-SALES-013.</description>
    <errorConditionFormula>ISCHANGED(StageName) &amp;&amp; ISPICKVAL(StageName, &apos;Proposal Sent&apos;) &amp;&amp; (ISPICKVAL(Contract_Length__c, &apos;&apos;) || ISBLANK(Decision_Date__c) || ISBLANK(Economic_Buyer__c))</errorConditionFormula>
    <errorMessage>Contract Length, Decision Date, and Economic Buyer are required before advancing to Proposal Sent.</errorMessage>
</ValidationRule>